--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
         COS_BUCKET_LOCATION: ap-shanghai
       run: |
         export PATH=$HOME/hugo:$PATH
+        git clone https://github.com/dillonzq/LoveIt.git ./themes/LoveIt
         hugo
         coscmd config -a ${{secrets.COS_SECRET_ID}} -s ${{secrets.COS_SECRET_KEY}} -b ${COS_BUCKET_NAME} -r ${COS_BUCKET_LOCATION} -m 10
         coscmd upload -r -s public/ /
