--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
         git clone https://github.com/dillonzq/LoveIt.git ./themes/LoveIt
         hugo
         coscmd config -a ${{secrets.COS_SECRET_ID}} -s ${{secrets.COS_SECRET_KEY}} -b ${COS_BUCKET_NAME} -r ${COS_BUCKET_LOCATION}
-        coscmd upload -r -s public/ /
+        coscmd upload -r public/ /
         ls -l public/
 
 
