--- a/config.toml
+++ b/config.toml
@@ -72,7 +72,7 @@ theme = "LoveIt"
     identifier = "about"
     pre = ""
     post = ""
-    name = "关于"
+    name = "About"
     url = "/about/"
     title = ""
     weight = 4
