--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ theme = "LoveIt"
 
   [params.social]
     GitHub = "JooKS-me"
-    Email = "jooks@apache.org"
+    Email = "jookunshuai@gmail.com"
 
   [params.page]
     [params.page.share]
@@ -47,7 +47,7 @@ theme = "LoveIt"
     pre = ""
     # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
     post = ""
-    name = "文章"
+    name = "Posts"
     url = "/posts/"
     # 当你将鼠标悬停在此菜单链接上时, 将显示的标题
     title = ""
@@ -56,7 +56,7 @@ theme = "LoveIt"
     identifier = "tags"
     pre = ""
     post = ""
-    name = "标签"
+    name = "Tags"
     url = "/tags/"
     title = ""
     weight = 2
@@ -64,7 +64,7 @@ theme = "LoveIt"
     identifier = "categories"
     pre = ""
     post = ""
-    name = "分类"
+    name = "Categories"
     url = "/categories/"
     title = ""
     weight = 3
